// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render channel 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="general, last message Nov 10"
    accessibilityTraits="selected"
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "borderBottomColor": "#ddd",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#00BCD4",
              "borderRadius": 4,
              "height": 56,
              "width": 56,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 28,
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#444",
                "flex": 1,
                "fontSize": 18,
                "fontWeight": "bold",
                "marginRight": 8,
              }
            }
          >
            general
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "alignItems": "center",
                "color": "#888",
                "fontSize": 10,
                "justifyContent": "center",
              }
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`render no icon 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="name, last message Nov 10"
    accessibilityTraits="selected"
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "borderBottomColor": "#ddd",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 56,
              "width": 56,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 28,
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#444",
                "flex": 1,
                "fontSize": 18,
                "fontWeight": "bold",
                "marginRight": 8,
              }
            }
          >
            name
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "alignItems": "center",
                "color": "#888",
                "fontSize": 10,
                "justifyContent": "center",
              }
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`render private group 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="private-group, last message Nov 10"
    accessibilityTraits="selected"
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "borderBottomColor": "#ddd",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#FF9800",
              "borderRadius": 4,
              "height": 56,
              "width": 56,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 28,
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#444",
                "flex": 1,
                "fontSize": 18,
                "fontWeight": "bold",
                "marginRight": 8,
              }
            }
          >
            private-group
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "alignItems": "center",
                "color": "#888",
                "fontSize": 10,
                "justifyContent": "center",
              }
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
   
</View>
`;

exports[`render unread +999 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="name, 1000 alerts, last message Nov 10"
    accessibilityTraits="selected"
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "borderBottomColor": "#ddd",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 56,
              "width": 56,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 28,
              },
            ]
          }
        >
          NA
        </Text>
        
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#444",
                "flex": 1,
                "fontSize": 18,
                "fontWeight": "bold",
                "marginRight": 8,
              }
            }
          >
            name
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "alignItems": "center",
                "color": "#888",
                "fontSize": 10,
                "justifyContent": "center",
              }
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#1d74f5",
                "borderRadius": 4,
                "color": "#fff",
                "fontSize": 14,
                "justifyContent": "center",
                "minWidth": 25,
                "overflow": "hidden",
                "paddingHorizontal": 5,
                "paddingVertical": 4,
                "textAlign": "center",
              }
            }
          >
            999+
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`render unread 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="name, 1 alert, last message Nov 10"
    accessibilityTraits="selected"
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "borderBottomColor": "#ddd",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 56,
              "width": 56,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 28,
              },
            ]
          }
        >
          NA
        </Text>
        
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#444",
                "flex": 1,
                "fontSize": 18,
                "fontWeight": "bold",
                "marginRight": 8,
              }
            }
          >
            name
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "alignItems": "center",
                "color": "#888",
                "fontSize": 10,
                "justifyContent": "center",
              }
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#1d74f5",
                "borderRadius": 4,
                "color": "#fff",
                "fontSize": 14,
                "justifyContent": "center",
                "minWidth": 25,
                "overflow": "hidden",
                "paddingHorizontal": 5,
                "paddingVertical": 4,
                "textAlign": "center",
              }
            }
          >
            1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="name, last message Nov 10"
    accessibilityTraits="selected"
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "borderBottomColor": "#ddd",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 56,
              "width": 56,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 28,
              },
            ]
          }
        >
          NA
        </Text>
        
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginLeft": 16,
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#444",
                "flex": 1,
                "fontSize": 18,
                "fontWeight": "bold",
                "marginRight": 8,
              }
            }
          >
            name
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "alignItems": "center",
                "color": "#888",
                "fontSize": 10,
                "justifyContent": "center",
              }
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
